Fix odd row last cell border colors on Firefox
Firefox was allowing the background color to overlap the borders which
made it look like there was not a border on the cell. This shows up
when the rows are striped, or on a row hover. Fixed by explicitly
adding background-clip:padding-box, which should have been the
default behavior.

Closes-bug: 1353695

--- a/openstack_dashboard/static/dashboard/scss/horizon.scss
+++ b/openstack_dashboard/static/dashboard/scss/horizon.scss
@@ -838,6 +838,7 @@ div.table_cell_wrapper {
 .table-striped.datatable tbody {
   tr.odd td {
     background-color: $table-bg-odd;
+    background-clip: padding-box;
   }
   tr.even td {
     background-color: inherit;
@@ -846,6 +847,7 @@ div.table_cell_wrapper {
   tr.even:hover td,
   tr:hover th {
     background-color: $table-bg-hover;
+    background-clip: padding-box;
   }
 }
 
